<?xml version="1.0"?>
<package format="2">
  <name>tf2_2d</name>
  <version>0.6.4</version>
  <description>
    A set of 2D geometry classes modeled after the 3D geometry classes in tf2.
  </description>

  <maintainer email="swilliams@locusrobotics.com">Stephen Williams</maintainer>
  <author email="swilliams@locusrobotics.com">Stephen Williams</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>eigen</depend>
  <depend>roscpp</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>

  <test_depend>roslint</test_depend>
</package>
