<?xml version="1.0"?>
<package format="2">
  <name>tf2_2d</name>
  <version>1.0.1</version>
  <description>
    A set of 2D geometry classes modeled after the 3D geometry classes in tf2.
  </description>

  <maintainer email="swilliams@locusrobotics.com">Stephen Williams</maintainer>
  <author email="swilliams@locusrobotics.com">Stephen Williams</author>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>libboost-dev</depend>
  <depend>eigen</depend>
  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
